--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,46 @@
-site_name: My Docs
+site_name: API consulta Alfândega
 theme:
   name: material
+  language: pt-BR
+  logo: assets/Vector.png
+  theme:
+  features:
+    - navigation.expand
+  palette:
+    - scheme: default
+      primary: white
+      toggle:
+        icon: material/toggle-switch-off-outline 
+        name: dark mode
+
+    - scheme: slate 
+      toggle:
+        icon: material/toggle-switch
+        name: light mode  
+extra_css:
+  - stylesheets/extra.css
+nav:
+    - Introdução: index.md
+    - Guia de início rápido: 
+      - Como se autenticar na API: quickStart/howToAuthenticate.md
+      - Como utilizar a demonstração da API: quickStart/howToConsult.md
+    - documentação:
+      - Tipagem e formatação: documentation/typesFormat.md
+      - Códigos de retorno: documentation/returnCode.md
+    - Consultar APIs:
+      - EasyTrade Customs: apis/easytradeCustoms.md
+      - Associate: apis/associate.md
+    - Suporte:
+      - Contato: contact/support.md
+plugins:
+   - swagger-ui-tag
+   - search
+
+extra:
+  consent:
+    title: Cookie consent
+    description: >-     
+      Usamos cookies para reconhecer suas visitas repetidas e preferências, bem como
+      para medir a eficácia de nossa documentação e se os usuários
+      encontrar o que eles estão procurando. Com o seu consentimento, você está nos ajudando a
+      tornar nossa documentação melhor.
